--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -8,43 +8,21 @@
     <link rel="icon" type="image/png" href="/static/images/icon.png">
 </head>
 <body>
-    <header class="header" data-section-theme="light">
-        <div class="container">
-          <div class="logo">
-            <a href="/HBnB">
-              <img src="/static/images/logo.png" alt="hbnb logo" width="160" height="40">
-            </a>
-          </div>
-          <nav class="navbar-menu">
-            <ul class="nav" id="nav-menu">
-              <li class="nav-item">
-                <a href="/HBnB" class="nav-link">Places</a>
-              </li>
-              <!-- <li class="nav-item">
-                <a href="/HBnB/place" class="nav-link">Place</a>
-              </li> -->
-            </ul>
-          </nav>
-        </div>
-    </header>
-    <main>
-        <form id="login-form">
-            <h2>Login</h2>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-            
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
-            
-            <button type="submit">Login</button>
-        </form>
-    </main>
-    <footer class="footer" data-section-theme="light">
-        <div class="container">
-          <p>&copy; 2024 HBnB. All rights reserved.</p>
-        </div>
-    </footer>
-    <script src="/static/auth_links.js"></script>
-    <script src="/static/login.js"></script>
+  {% include 'header.html' %}
+  <main>
+      <form id="login-form">
+          <h2>Login</h2>
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" required>
+          
+          <label for="password">Password:</label>
+          <input type="password" id="password" name="password" required>
+          
+          <button type="submit">Login</button>
+      </form>
+  </main>
+  {% include 'footer.html' %}
+  <script src="/static/auth_links.js"></script>
+  <script src="/static/login.js"></script>
 </body>
 </html>
