--- a/app/templates/place.html
+++ b/app/templates/place.html
@@ -8,63 +8,41 @@
     <link rel="icon" type="image/png" href="/static/images/icon.png">
 </head>
 <body>
-    <header class="header" data-section-theme="light">
-        <div class="container">
-          <div class="logo">
-            <a href="/HBnB">
-              <img src="/static/images/logo.png" alt="hbnb logo" width="160" height="40">
-            </a>
-          </div>
-          <nav class="navbar-menu">
-            <ul class="nav" id="nav-menu">
-              <li class="nav-item">
-                <a href="/HBnB" class="nav-link">Places</a>
-              </li>
-              <!-- <li class="nav-item">
-                <a href="/HBnB/place" class="nav-link active">Place</a>
-              </li> -->
-            </ul>
-          </nav>
-        </div>
-    </header>
-    <main>
-        <div class="vertical-align">
-            <section id="place-details" >
-                <!-- Place details will be populated here -->
-            </section>
-            <section id="reviews" class="review-card">
-                <h2>Reviews</h2>
-                <div id="review-list">
-                    <!-- Reviews will be populated here -->
-                </div>
-            </section>
-            <section id="add-review">
-                <h2>Add a Review</h2>
-                <form id="review-form">
-                    <label for="review-text">Review:</label>
-                    <textarea id="review-text" name="review-text" required></textarea>
+  {% include 'header.html' %}
+  <main>
+      <div class="vertical-align">
+          <section id="place-details" >
+              <!-- Place details will be populated here -->
+          </section>
+          <section id="reviews" class="review-card">
+              <h2>Reviews</h2>
+              <div id="review-list">
+                  <!-- Reviews will be populated here -->
+              </div>
+          </section>
+          <section id="add-review">
+              <h2>Add a Review</h2>
+              <form id="review-form">
+                  <label for="review-text">Review:</label>
+                  <textarea id="review-text" name="review-text" required></textarea>
 
-                    <label for="review-rating">Rating:</label>
-                    <select id="review-rating" name="review-rating" type="number" min="1" max="5" required>
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                    </select>
+                  <label for="review-rating">Rating:</label>
+                  <select id="review-rating" name="review-rating" type="number" min="1" max="5" required>
+                      <option value="1">1</option>
+                      <option value="2">2</option>
+                      <option value="3">3</option>
+                      <option value="4">4</option>
+                      <option value="5">5</option>
+                  </select>
 
-                    <button type="submit">Submit</button>
-                </form>
-            </section>
-        </div>
-    </main>
-    <footer class="footer" data-section-theme="light">
-        <div class="container">
-          <p>&copy; 2024 HBnB. All rights reserved.</p>
-        </div>
-    </footer>
-    <script src="/static/fetch_place_details.js"></script>
-    <script src="/static/add_review.js"></script>
-    <script src="/static/auth_links.js"></script>
+                  <button type="submit">Submit</button>
+              </form>
+          </section>
+      </div>
+  </main>
+  {% include 'footer.html' %}
+  <script src="/static/fetch_place_details.js"></script>
+  <script src="/static/add_review.js"></script>
+  <script src="/static/auth_links.js"></script>
 </body>
 </html>
