--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -8,11 +8,11 @@
         <nav class="navbar-menu">
         <ul class="nav" id="nav-menu">
             <li class="nav-item">
-            <a href="/HBnB" class="nav-link active">Places</a>
+            <a href="/HBnB" class="nav-link {% if current_page == 'places' %}active{% endif %}">Places</a>
             </li>
-            <!-- <li class="nav-item">
-            <a href="/HBnB/place" class="nav-link">Place</a>
-            </li> -->
+            <li class="nav-item">
+            <a href="/HBnB/register" class="nav-link {% if current_page == 'register' %}active{% endif %}">Sign-in</a>
+            </li>
         </ul>
         </nav>
     </div>
