--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -504,21 +504,6 @@ a:active {
   color: var (var(--nav-item-link-hover));
 }
 
-/* Form styles */
-#login-form {
-  width: 100%;
-  max-width: 800px;
-  padding: 2rem;
-  background: #fff;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
-  margin-top: 20rem;
-}
-
-#login-form h2 {
-  margin-bottom: 2rem;
-}
-
 /* Horizontal and vertical alignment classes */
 .horizontal-align {
   display: flex;
@@ -643,6 +628,55 @@ a:active {
   max-width: var(--card-max-width);
   margin-left: auto;
   margin-right: auto;
+}
+
+/* Login form styles */
+#login {
+  width: 30%;
+  margin: 2rem 0;
+  text-align: center;
+}
+
+#login-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+#login-form label {
+  margin-bottom: 0.5rem;
+  width: 100%;
+  text-align: left;
+  max-width: var(--card-max-width);
+}
+
+#login-form textarea, 
+#login-form select {
+  margin-bottom: 1rem;
+  padding: 0.5rem;
+  font-size: 1.6rem;
+  width: 100%;
+  max-width: var(--card-max-width);
+}
+
+#login-form button {
+  background-color: var(--header-bg-color);
+  color: var(--color-white);
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 1.6rem;
+  align-self: flex-start;
+  max-width: var(--card-max-width);
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#login-form button:hover {
+  background-color: var(--nav-item-link-hover);
 }
 
 /* Add review form styles */
