Update: header.html & auth_links.js to dynamically create the sign-in link in header if not loged-in

--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -10,9 +10,9 @@
             <li class="nav-item">
             <a href="/HBnB" class="nav-link {% if current_page == 'places' %}active{% endif %}">Places</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
             <a href="/HBnB/register" class="nav-link {% if current_page == 'register' %}active{% endif %}">Sign-in</a>
-            </li>
+            </li> -->
         </ul>
         </nav>
     </div>
