Update: auth_links.js to have access to sign-in even if loged-in to can register a new user, register_user.js with new logic to check if passwords match, login and register forms with input fields and coorresponding types for better user experience and hiding passwords...

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -651,7 +651,7 @@ a:active {
   max-width: var(--card-max-width);
 }
 
-#login-form textarea, 
+#login-form input, 
 #login-form select {
   margin-bottom: 1rem;
   padding: 0.5rem;
@@ -749,7 +749,7 @@ a:active {
   max-width: var(--card-max-width);
 }
 
-#register-user-form textarea, 
+#register-user-form input, 
 #register-user-form select {
   margin-bottom: 1rem;
   padding: 0.5rem;
