--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -15,9 +15,9 @@
             <h2>Login</h2>
             <form id="login-form">
               <label for="email">Email:</label>
-              <textarea type="email" id="email" name="email" required></textarea>
+              <input type="email" id="email" name="email" required></input>
               <label for="password">Password:</label>
-              <textarea type="password" id="password" name="password" required></textarea>
+              <input type="password" id="password" name="password" required></input>
               <button type="submit">Login</button>
             </form>
           </section>
