--- a/app/templates/register_new_place.html
+++ b/app/templates/register_new_place.html
@@ -30,8 +30,11 @@
                 <label for="longitude">Longitude:</label>
                 <input type="number" id="longitude" name="longitude" step="0.0001" min="-180" max="180" required>
                 <!-- Amenities Field -->
-                <label for="amenities">Amenities:</label>
-                <input type="text" id="amenities" name="amenities"></input>
+                <label for="amenities">Select an amenity (You can add more later..):</label>
+                <select id="amenities" name="amenities">
+                  <option value=""></option>
+                <!-- Options will be populated dynamically -->
+                </select>
 
                 <button type="submit">Submit</button>
               </form>
@@ -41,5 +44,6 @@
   {% include 'footer.html' %}
   <script src="/static/auth_links.js"></script>
   <script src="/static/add_place.js"></script>
+  <script src="/static/populate_dropdown_amenities.js"></script>
 </body>
 </html>
