--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -571,7 +571,43 @@ a:active {
 }
 
 .details-button {
+  display: block;
+  width: 100%;
   background-color: var(--header-bg-color);
+  color: var(--color-white);
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 1.6rem;
+  margin-bottom: 10px;
+}
+
+.details-button:hover {
+  background-color: var(--nav-item-link-hover);
+}
+
+.update-button {
+  display: block;
+  width: 100%;
+  background-color: rgb(73, 236, 165);
+  color: var(--color-white);
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 1.6rem;
+  margin-bottom: 10px;
+}
+
+.update-button:hover {
+  background-color: var(--nav-item-link-hover);
+}
+
+.delete-place-button {
+  display: block;
+  width: 100%;
+  background-color: rgb(239, 57, 57);
   color: var(--color-white);
   border: none;
   border-radius: 5px;
@@ -580,7 +616,7 @@ a:active {
   font-size: 1.6rem;
 }
 
-.details-button:hover {
+.delete-place-button:hover {
   background-color: var(--nav-item-link-hover);
 }
 
