Update: routes_FrontEnd.py with new route to update a review, routes_FrontEnd.py: delete useless comments, user_places.html: add section to populate user reviews; Add: get_user_reviews.js to fetch and display user reviews includes update and delete buttons , update_review.html: page with form to update a review, update_review.js: to update the review in DB when submiting update form

--- a/app/templates/user_places.html
+++ b/app/templates/user_places.html
@@ -20,10 +20,21 @@
                   <!-- Place cards will be dynamically populated here -->
               </section>
           </div>
+          <div class="vertical-align">
+            <section id="reviews" class="review-card">
+                <header class="section-header">
+                    <h2 class="section-title">Your reviews</h2>
+                </header>
+                <div id="review-list">
+                    <!-- Reviews will be populated here -->
+                </div>
+            </section>
+          </div>
       </section>
   </main>
   {% include 'footer.html' %}
   <script src="/static/get_user_places.js"></script>
+  <script src="/static/get_user_reviews.js"></script>
   <script src="/static/auth_links.js"></script>
 </body>
 </html>
