--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,7 +10,7 @@
 <body>
   {% include 'header.html' %}
   <main>
-      <section id="Places" class="section">
+      <section id="Places" class="background-card">
           <div class="container">
               <header class="section-header">
                   <h2 class="section-title">Available places</h2>
