--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -11,7 +11,7 @@
   {% include 'header.html' %}
   <main>
       <div class="vertical-align">
-          <section id="login">
+          <section id="login" class="background-card">
             <h2>Login</h2>
             <form id="login-form">
               <label for="email">Email:</label>
