--- a/app/templates/place_details.html
+++ b/app/templates/place_details.html
@@ -20,7 +20,7 @@
                   <!-- Reviews will be populated here -->
               </div>
           </section>
-          <section id="add-review">
+          <section id="add-review" class="review-card">
               <h2>Add a Review</h2>
               <form id="review-form">
                   <label for="review-text">Review:</label>
