--- a/app/templates/register_new_place.html
+++ b/app/templates/register_new_place.html
@@ -11,7 +11,7 @@
   {% include 'header.html' %}
   <main>
       <div class="vertical-align">
-          <section id="register-place">
+          <section id="register-place" class="background-card">
               <h2>Register a new place</h2>
               <form id="register-place-form">
                 <!-- Title Field -->
