--- a/app/templates/register_new_user.html
+++ b/app/templates/register_new_user.html
@@ -11,7 +11,7 @@
   {% include 'header.html' %}
   <main>
       <div class="vertical-align">
-          <section id="register-user">
+          <section id="register-user" class="background-card">
               <h2>Create new account</h2>
               <form id="register-user-form">
                 <!-- Username Field -->
