--- a/app/templates/update_place.html
+++ b/app/templates/update_place.html
@@ -11,8 +11,8 @@
   {% include 'header.html' %}
   <main>
       <div class="vertical-align">
-          <section id="register-place">
-              <h2>Update your place</h2>
+          <section id="register-place" class="background-card">
+              <h2>Update the place</h2>
               <form id="register-place-form">
                 <!-- Title Field -->
                 <label for="title">Title:</label>
