--- a/app/templates/update_review.html
+++ b/app/templates/update_review.html
@@ -11,8 +11,8 @@
   {% include 'header.html' %}
   <main>
       <div class="vertical-align">
-          <section id="add-review">
-              <h2>Update your Review</h2>
+          <section id="add-review" class="background-card">
+              <h2>Update the Review</h2>
               <form id="review-form">
                   <label for="review-text">Review:</label>
                   <textarea id="review-text" name="review-text" required></textarea>
