--- a/app/templates/user_places.html
+++ b/app/templates/user_places.html
@@ -11,7 +11,7 @@
   {% include 'header.html' %}
   <main>
       <section id="Places" class="section">
-          <div class="container">
+          <div class="background-card">
               <header class="section-header">
                   <h2 class="section-title">Your places</h2>
               </header>
