Update: index.html and styles.css to add a filter with a dropdown selector; Add: populate_dropdown_prices.js to dynamially populate the dropdown with a list of max prices; Add: filter_by_price.js to filter and render the places filtered by max price; Update: register_user.js to display an alert if the user trying to add a new user is not admin; Update: auth_links.js to display Add_user link in header only if the logged user is admin

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -541,7 +541,7 @@ a:active {
   text-align: center;
 }
 
-#country-filter {
+#country-filter, #price-filter {
   padding: 0.5rem;
   font-size: 1.6rem;
 }
