--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,13 +15,13 @@
               <header class="section-header">
                   <h2 class="section-title">Available places</h2>
               </header>
-              <!-- <section id="filter">
-                  <label for="country-filter">Filter by Country:</label>
-                  <select id="country-filter">
-                    <option value="">Select a country</option>
-                      Options will be populated dynamically
+              <section id="filter">
+                  <label for="price-filter">Filter by Price:</label>
+                  <select id="price-filter">
+                    <option value="">Select max price</option>
+                      <!-- Options will be populated dynamically -->
                   </select>
-              </section> -->
+              </section>
               <section id="places-list">
                   <!-- Place cards will be dynamically populated here -->
               </section>
@@ -32,6 +32,8 @@
   <script src="../static/get_all_places.js"></script>
   <!-- <script src="../static/populate_dropdown_countries.js"></script> -->
   <!-- <script src="../static/filter_by_country.js"></script> -->
+  <script src="../static/populate_dropdown_prices.js"></script>
+  <script src="../static/filter_by_price.js"></script>
   <script src="/static/auth_links.js"></script>
 </body>
 </html>
